--- a/articles/zone-pivot-groups.yml
+++ b/articles/zone-pivot-groups.yml
@@ -58,6 +58,10 @@ groups:
     title: Java
   - id: programming-language-python
     title: Python
+  - id: programming-language-go
+    title: Go
+  - id: programming-language-javascript
+    title: JavaScript
 - id: programming-languages-set-four
   title: 编程语言
   prompt: 选择编程语言
@@ -186,6 +190,8 @@ groups:
     title: PowerShell
   - id: programming-language-python
     title: Python
+  - id: programming-language-typescript
+    title: TypeScript
 - id: programming-languages-text-analytics
   title: 编程语言
   prompt: 选择编程语言。
@@ -268,6 +274,18 @@ groups:
     title: Java
   - id: programming-language-more
     title: 更多语言...
+- id: programming-languages-set-fifteen
+  title: 编程语言
+  prompt: 选择编程语言
+  pivots:
+  - id: programming-language-csharp
+    title: C#
+  - id: programming-language-java
+    title: Java
+  - id: programming-language-go
+    title: Go
+  - id: programming-language-more
+    title: 更多语言...
 - id: programming-languages-set-sixteen
   title: 编程语言
   prompt: 选择编程语言
@@ -278,10 +296,10 @@ groups:
     title: C++
   - id: programming-language-java
     title: Java
-  - id: programming-language-javascript
-    title: JavaScript
   - id: programming-language-python
     title: Python
+  - id: programming-language-go
+    title: Go
   - id: programming-language-more
     title: 更多语言...
 - id: programming-languages-set-seventeen
@@ -292,8 +310,8 @@ groups:
     title: C#
   - id: programming-language-javascript
     title: JavaScript
-  - id: programming-language-python
-    title: Python
+  - id: programming-language-more
+    title: 更多语言...
 - id: programming-languages-set-eighteen
   title: 编程语言
   prompt: 选择编程语言
@@ -304,10 +322,90 @@ groups:
     title: Python
   - id: programming-language-go
     title: Go
+- id: programming-languages-set-two-with-js
+  title: 编程语言
+  prompt: 选择编程语言
+  pivots:
+  - id: programming-language-csharp
+    title: C#
+  - id: programming-language-cpp
+    title: C++
+  - id: programming-language-java
+    title: Java
+  - id: programming-language-python
+    title: Python
+  - id: programming-language-javascript
+    title: JavaScript
+  - id: programming-language-more
+    title: 更多语言...
+- id: programming-languages-set-two-with-js-go
+  title: 编程语言
+  prompt: 选择编程语言
+  pivots:
+  - id: programming-language-csharp
+    title: C#
+  - id: programming-language-cpp
+    title: C++
+  - id: programming-language-java
+    title: Java
+  - id: programming-language-python
+    title: Python
+  - id: programming-language-javascript
+    title: JavaScript
+  - id: programming-language-go
+    title: Go
+  - id: programming-language-more
+    title: 更多语言...
+- id: programming-languages-speech-services-one-nomore
+  title: 编程语言
+  prompt: 选择编程语言
+  pivots:
+  - id: programming-language-csharp
+    title: C#
+  - id: programming-language-cpp
+    title: C++
+  - id: programming-language-java
+    title: Java
+  - id: programming-language-python
+    title: Python
+  - id: programming-language-go
+    title: Go
+  - id: programming-language-javascript
+    title: JavaScript
+- id: programming-languages-speech-services-one-nomore-no-go
+  title: 编程语言
+  prompt: 选择编程语言
+  pivots:
+  - id: programming-language-csharp
+    title: C#
+  - id: programming-language-cpp
+    title: C++
+  - id: programming-language-java
+    title: Java
+  - id: programming-language-python
+    title: Python
+  - id: programming-language-javascript
+    title: JavaScript
+- id: programming-languages-speech-services-nomore-variant
+  title: 编程语言
+  prompt: 选择编程语言
+  pivots:
+  - id: programming-language-csharp
+    title: C#
+  - id: programming-language-cpp
+    title: C++
+  - id: programming-language-java
+    title: Java
+  - id: programming-language-python
+    title: Python
+  - id: programming-language-javascript
+    title: JavaScript
+  - id: programming-language-objectivec
+    title: Objective-C
 metadata:
-  ms.openlocfilehash: 5da5cf4aebfdaeec784e3cffe18e5b834b8dc26f
-  ms.sourcegitcommit: f7fb9e7867798f46c80fe052b5ee73b9151b0e0b
+  ms.openlocfilehash: da1e4c0150749cf17b36e6f1a69b76666895f5ab
+  ms.sourcegitcommit: 999ccaf74347605e32505cbcfd6121163560a4ae
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 04/24/2020
-  ms.locfileid: "82146842"
+  ms.lasthandoff: 05/08/2020
+  ms.locfileid: "82981806"
