commit translated contents

--- a/articles/cognitive-services/Speech-Service/index.yml
+++ b/articles/cognitive-services/Speech-Service/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.topic: hub-page
   ms.date: 03/24/2020
   ms.author: trbye
-  ms.openlocfilehash: a833fc4c8c3115b3ec0d51787b62503f73e8c863
-  ms.sourcegitcommit: 31e9f369e5ff4dd4dda6cf05edf71046b33164d3
+  ms.openlocfilehash: d1eb706e7156d2444d995904b0a0fecc0a76f4e5
+  ms.sourcegitcommit: ac4a365a6c6ffa6b6a5fbca1b8f17fde87b4c05e
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 04/22/2020
-  ms.locfileid: "81757313"
+  ms.lasthandoff: 05/10/2020
+  ms.locfileid: "83005134"
 highlightedContent:
   items:
   - title: 什么是语音服务？
@@ -206,3 +206,5 @@ additionalContent:
         url: https://github.com/Azure-Samples/cognitive-services-speech-sdk/issues
       - text: Stack Overflow
         url: https://aka.ms/SOspeechquestions
+      - text: UserVoice
+        url: https://cognitive.uservoice.com/forums/912208-speech-service
