--- a/articles/azure-databricks/TOC.yml
+++ b/articles/azure-databricks/TOC.yml
@@ -37,14 +37,16 @@
     - name: 语言指南
       items:
         - name: Python
-          href: /azure/databricks/languages/python
-          maintainContext: true
-        - name: Koalas
-          href: /azure/databricks/languages/koalas
-          maintainContext: true
+          items:
+            - name: Python 概述
+              href: /azure/databricks/languages/python
+              maintainContext: true
+            - name: Koalas
+              href: /azure/databricks/languages/koalas
+              maintainContext: true
         - name: R
           items:
-            - name: R 指南
+            - name: R 概述
               href: /azure/databricks/spark/latest/sparkr/index
               maintainContext: true
             - name: SparkR 概述
@@ -281,9 +283,6 @@
         - name: Databricks Runtime
           href: /azure/databricks/runtime/dbr
           maintainContext: true
-        - name: 带有 Conda 的 Databricks Runtime
-          href: /azure/databricks/runtime/conda
-          maintainContext: true
         - name: 用于机器学习的 Databricks Runtime
           href: /azure/databricks/runtime/mlruntime
           maintainContext: true
@@ -306,6 +305,9 @@
           maintainContext: true
         - name: 获取工作区、群集、笔记本和作业标识符
           href: /azure/databricks/workspace/workspace-details
+          maintainContext: true
+        - name: 迁移到每工作区 URL
+          href: /azure/databricks/workspace/migrate-workspace-urls
           maintainContext: true
     - name: 群集
       items:
@@ -451,9 +453,6 @@
               maintainContext: true
             - name: Azure Data Lake Storage
               href: /azure/databricks/data/data-sources/azure/azure-datalake
-              maintainContext: true
-            - name: Azure Data Lake Storage 凭据直通身份验证
-              href: /azure/databricks/data/data-sources/azure/adls-passthrough
               maintainContext: true
             - name: Cosmos DB
               href: /azure/databricks/data/data-sources/azure/cosmosdb-connector
@@ -1027,7 +1026,7 @@
               href: /azure/databricks/security/access-control/pool-acl
               maintainContext: true
             - name: 作业访问控制
-              href: /azure/databricks/security/access-control/jobs-acl
+              href: /azure/databricks/security/access-control/job-acl
               maintainContext: true
             - name: 表访问控制
               items:
@@ -1110,7 +1109,7 @@
             - name: 使用 SCIM 预配用户和组
               href: /azure/databricks/administration-guide/users-groups/scim/index
               maintainContext: true
-            - name: 为 AAD 配置 SCIM 预配
+            - name: 为 Azure AD 配置 SCIM 预配
               href: /azure/databricks/administration-guide/users-groups/scim/aad
               maintainContext: true
         - name: 管理访问控制
@@ -1138,9 +1137,6 @@
               maintainContext: true
             - name: 条件性访问
               href: /azure/databricks/administration-guide/access-control/conditional-access
-              maintainContext: true
-            - name: 启用 Azure Data Lake Storage 凭据直通身份验证
-              href: /azure/databricks/administration-guide/access-control/credential-passthrough
               maintainContext: true
         - name: 管理工作区对象和行为
           items:
@@ -1619,21 +1615,35 @@
               maintainContext: true
             - name: 身份验证
               items:
-                - name: 个人访问令牌
+                - name: Azure Databricks 个人访问令牌
                   href: /azure/databricks/dev-tools/api/latest/authentication
                   maintainContext: true
-                - name: Azure Active Directory (AAD) 令牌
+                - name: Azure Active Directory 令牌
                   items:
-                    - name: AAD 令牌身份验证概述
+                    - name: Azure AD 令牌身份验证概述
                       href: /azure/databricks/dev-tools/api/latest/aad/index
                       maintainContext: true
-                    - name: 使用 AAD 身份验证库获取 AAD 令牌
+                    - name: 使用 Azure AD 身份验证库获取 Azure AD 令牌
                       href: /azure/databricks/dev-tools/api/latest/aad/app-aad-token
                       maintainContext: true
-                    - name: 使用服务主体获取 AAD 令牌
+                    - name: 使用服务主体获取 Azure AD 令牌
                       href: /azure/databricks/dev-tools/api/latest/aad/service-prin-aad-token
                       maintainContext: true
-                    - name: AAD 访问令牌疑难解答
+                    - name: 排查 Azure AD 访问令牌问题
+                      href: /azure/databricks/dev-tools/api/latest/aad/troubleshoot-aad-token
+                  maintainContext: true
+                - name: Azure Active Directory (Azure AD) 令牌
+                  items:
+                    - name: Azure AD 令牌身份验证概述
+                      href: /azure/databricks/dev-tools/api/latest/aad/index
+                      maintainContext: true
+                    - name: 使用 Azure AD 身份验证库获取 Azure AD 令牌
+                      href: /azure/databricks/dev-tools/api/latest/aad/app-aad-token
+                      maintainContext: true
+                    - name: 使用服务主体获取 Azure AD 令牌
+                      href: /azure/databricks/dev-tools/api/latest/aad/service-prin-aad-token
+                      maintainContext: true
+                    - name: 排查 Azure AD 访问令牌问题
                       href: /azure/databricks/dev-tools/api/latest/aad/troubleshoot-aad-token
                       maintainContext: true
             - name: 群集
@@ -1666,7 +1676,7 @@
                 - name: SCIM API（用户）
                   href: /azure/databricks/dev-tools/api/latest/scim/scim-users
                 - name: SCIM API（组）
-                  href: /azure/databricks/dev-tools/api/latest/scim/scim-groups
+                  href: /azure/databricks/dev-tools/api/latest/scim/scim-group
               maintainContext: true
             - name: 机密
               href: /azure/databricks/dev-tools/api/latest/secrets
@@ -1760,6 +1770,9 @@
             - name: 平台发行说明
               href: /azure/databricks/release-notes/product/index
               maintainContext: true
+            - name: 2020 年 5 月
+              href: /azure/databricks/release-notes/product/2020/may
+              maintainContext: true
             - name: 2020 年 4 月
               href: /azure/databricks/release-notes/product/2020/april
               maintainContext: true
@@ -1851,11 +1864,20 @@
                 - name: 运行时版本
                   href: /azure/databricks/release-notes/runtime/releases
                   maintainContext: true
+                - name: Databricks Runtime 7.0 基因组学（Beta 版本）
+                  href: /azure/databricks/release-notes/runtime/7.0genomics
+                  maintainContext: true
                 - name: Databricks Runtime 7.0 ML（Beta 版本）
                   href: /azure/databricks/release-notes/runtime/7.0ml
                   maintainContext: true
                 - name: Databricks Runtime 7.0（Beta 版本）
                   href: /azure/databricks/release-notes/runtime/7.0
+                  maintainContext: true
+                - name: Databricks Runtime 6.6 基因组学（Beta 版本）
+                  href: /azure/databricks/release-notes/runtime/6.6genomics
+                  maintainContext: true
+                - name: Databricks Runtime 6.6（Beta 版本）
+                  href: /azure/databricks/release-notes/runtime/6.6
                   maintainContext: true
                 - name: Databricks Runtime 6.5
                   href: /azure/databricks/release-notes/runtime/6.5
@@ -1902,26 +1924,17 @@
                 - name: Databricks Runtime 6.0
                   href: /azure/databricks/release-notes/runtime/6.0
                   maintainContext: true
-                - name: 带有 Conda 的 Databricks Runtime 6.0
-                  href: /azure/databricks/release-notes/runtime/6.0conda
-                  maintainContext: true
                 - name: Databricks Runtime 6.0 ML
                   href: /azure/databricks/release-notes/runtime/6.0ml
                   maintainContext: true
                 - name: Databricks Runtime 5.5
                   href: /azure/databricks/release-notes/runtime/5.5
                   maintainContext: true
-                - name: 带有 Conda 的 Databricks Runtime 5.5
-                  href: /azure/databricks/release-notes/runtime/5.5conda
-                  maintainContext: true
                 - name: Databricks Runtime 5.5 ML
                   href: /azure/databricks/release-notes/runtime/5.5ml
                   maintainContext: true
                 - name: Databricks Runtime 5.4
                   href: /azure/databricks/release-notes/runtime/5.4
-                  maintainContext: true
-                - name: 带有 Conda 的 Databricks Runtime 5.4
-                  href: /azure/databricks/release-notes/runtime/5.4conda
                   maintainContext: true
                 - name: Databricks Runtime 5.4 ML
                   href: /azure/databricks/release-notes/runtime/5.4ml
@@ -1938,20 +1951,11 @@
                 - name: Databricks Runtime 5.2
                   href: /azure/databricks/release-notes/runtime/5.2
                   maintainContext: true
-                - name: Databricks Runtime 5.2 ML
-                  href: /azure/databricks/release-notes/runtime/5.2ml
-                  maintainContext: true
                 - name: Databricks Runtime 5.1
                   href: /azure/databricks/release-notes/runtime/5.1
                   maintainContext: true
-                - name: Databricks Runtime 5.1 ML
-                  href: /azure/databricks/release-notes/runtime/5.1ml
-                  maintainContext: true
                 - name: Databricks Runtime 5.0
                   href: /azure/databricks/release-notes/runtime/5.0
-                  maintainContext: true
-                - name: Databricks Runtime 5.0 ML
-                  href: /azure/databricks/release-notes/runtime/5.0ml
                   maintainContext: true
                 - name: Databricks Runtime 4.3
                   href: /azure/databricks/release-notes/runtime/4.3
@@ -1961,9 +1965,6 @@
                   maintainContext: true
                 - name: Databricks Runtime 4.1
                   href: /azure/databricks/release-notes/runtime/4.1
-                  maintainContext: true
-                - name: Databricks Runtime 4.1 ML
-                  href: /azure/databricks/release-notes/runtime/4.1ml
                   maintainContext: true
                 - name: Databricks Runtime 4.0
                   href: /azure/databricks/release-notes/runtime/4.0
