--- a/articles/virtual-wan/TOC.yml
+++ b/articles/virtual-wan/TOC.yml
@@ -10,6 +10,8 @@
           href: migrate-from-hub-spoke-topology.md
         - name: 全球传输网络体系结构
           href: virtual-wan-global-transit-network-architecture.md
+        - name: SD-WAN 连接体系结构
+          href: sd-wan-connectivity-architecture.md
         - name: 与中国互联
           href: interconnect-china.md
 - name: 教程
