--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -39,8 +39,6 @@
               href: sql-api-java-get-started.md
             - name: 异步 Java
               href: sql-api-async-java-get-started.md
-            - name: 使用更改源的异步 Java 示例
-              href: create-sql-api-java-changefeed.md
             - name: Node.js
               href: sql-api-nodejs-get-started.md
         - name: 构建 Web 应用
@@ -168,15 +166,15 @@
             - name: OFFSET LIMIT
               displayName: offset limit
               href: sql-query-offset-limit.md
+        - name: 使用 JSON
+          displayName: 'alias, JSON, projection'
+          href: sql-query-working-with-json.md
         - name: 子查询
           displayName: 'subquery, exists'
           href: sql-query-subquery.md
         - name: 联接
           displayName: join
           href: sql-query-join.md
-        - name: 别名
-          displayName: 'alias, aliasing'
-          href: sql-query-aliasing.md
         - name: 数组和对象
           displayName: 'object and array creation, object and array'
           href: sql-query-object-array.md
@@ -494,6 +492,8 @@
         - name: 触发 Azure Functions
           displayName: change feed
           href: change-feed-functions.md
+        - name: 更改源请求模型
+          href: change-feed-pull-model.md
     - name: 全球分布式分析和 AI
       items:
         - name: 分析用例
@@ -665,6 +665,8 @@
               href: create-mongodb-xamarin.md
             - name: Golang
               href: create-mongodb-golang.md
+            - name: Go
+              href: create-mongodb-go.md
         - name: 教程
           items:
             - name: 1 - 创建和管理数据
@@ -972,10 +974,14 @@
               href: sql-api-query-metrics.md
             - name: .NET SDK 性能提示
               href: performance-tips.md
-            - name: Java SDK 性能提示
-              href: performance-tips-java.md
-            - name: Async Java SDK 性能提示
-              href: performance-tips-async-java.md
+            - name: 适用于 Java SDK v4 的性能提示
+              href: performance-tips-java-sdk-v4-sql.md
+            - name: 适用于早期 Java SDK 的性能提示
+              items:
+                - name: Async Java SDK v2
+                  href: performance-tips-async-java.md
+                - name: Sync Java SDK v2
+                  href: performance-tips-java.md
             - name: 性能测试 - 示例应用
               href: performance-testing.md
         - name: 以经济高效的方式读取和写入
@@ -984,10 +990,18 @@
       items:
         - name: 查询性能故障排除
           href: troubleshoot-query-performance.md
-        - name: 排查 Java Async SDK 问题
-          href: troubleshoot-java-async-sdk.md
+        - name: 排查 Java SDK v4 问题
+          href: troubleshoot-java-sdk-v4-sql.md
+        - name: 排查早期 Java SDK 的问题
+          items:
+            - name: Async Java SDK v2
+              href: troubleshoot-java-async-sdk.md
         - name: 排查 .NET SDK 问题
           href: troubleshoot-dot-net-sdk.md
+    - name: 迁移到更新的 SDK
+      items:
+        - name: 迁移到 Java V4 SDK
+          href: migrate-java-v4-sdk.md
     - name: 更改源
       items:
         - name: Azure Cosmos DB 触发器日志
@@ -1004,6 +1018,8 @@
           href: how-to-use-change-feed-estimator.md
         - name: 从更改源处理器库迁移
           href: how-to-migrate-from-change-feed-library.md
+        - name: 使用更改源创建 Java SQL 应用程序
+          href: create-sql-api-java-changefeed.md
     - name: 将内置分析功能与 Apache Spark 配合使用
       items:
         - name: Azure Databricks Spark 连接器
