--- a/articles/synapse-analytics/sql-data-warehouse/toc.yml
+++ b/articles/synapse-analytics/sql-data-warehouse/toc.yml
@@ -37,6 +37,8 @@
       items:
         - name: COPY 语句
           href: quickstart-bulk-load-copy-tsql.md
+        - name: COPY 语句示例
+          href: quickstart-bulk-load-copy-tsql-examples.md
     - name: 缩放
       items:
         - name: 门户
