--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -62,6 +62,9 @@
   items:
     - name: Azure PowerShell
       href: platform/powershell-samples.md
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./policy-samples.md
 - name: 概念
   items:
     - name: 你可以监视什么？
@@ -109,8 +112,6 @@
           href: platform/alerts-unified-log.md
         - name: 活动日志警报
           href: platform/activity-log-alerts.md
-        - name: 更改分析
-          href: app/change-analysis.md
     - name: 可视化数据
       href: visualizations.md
     - name: 合作伙伴集成
@@ -442,8 +443,6 @@
               href: app/custom-data-correlation.md
             - name: 连接字符串
               href: app/sdk-connection-string.md
-            - name: 连接字符串
-              href: app/sdk-connection-string.md
             - name: GetMetric
               displayname: 'get metric, custom metrics, metrics, TrackMetric'
               href: app/get-metric.md
@@ -527,6 +526,8 @@
               href: platform/resource-logs-blob-format.md
         - name: 将数据流式传输到事件中心
           href: platform/stream-monitoring-data-event-hubs.md
+        - name: 更改分析
+          href: app/change-analysis.md
     - name: 监视 VM 和来宾 OS
       items:
         - name: 监视 Azure 虚拟机
@@ -750,8 +751,6 @@
           href: insights/containers.md
     - name: 监视其他资源
       items:
-        - name: Key Vault
-          href: insights/key-vault-insights-overview.md
         - name: 存储
           items:
             - name: 用于存储的 Azure Monitor
@@ -927,6 +926,10 @@
               href: platform/workbooks-data-sources.md
             - name: 使用 Azure 资源管理器进行部署
               href: platform/workbooks-automate.md
+            - name: 组
+              href: platform/workbooks-groups.md
+            - name: 使用 JSONPath 转换 JSON 数据
+              href: platform/workbooks-jsonpath.md
             - name: 配置
               items:
                 - name: 访问控制
