--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -193,7 +193,7 @@
       href: ../azure-resource-manager/management/async-operations.md?toc=%2fazure%2fevent-grid%2ftoc.json
     - name: 安全
       items:
-        - name: 配置专用终结点（预览版）
+        - name: 配置专用终结点
           href: configure-private-endpoints.md
         - name: 配置 IP 防火墙（预览版）
           href: configure-firewall.md
