--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -59,6 +59,8 @@
               href: storage-quickstart-blobs-php.md
             - name: Ruby
               href: storage-quickstart-blobs-ruby.md
+            - name: Xamarin
+              href: storage-quickstart-blobs-xamarin.md
     - name: 教程
       items:
         - name: 上传和处理图像
@@ -700,8 +702,10 @@
       items:
         - name: 创建
           items:
-            - name: 创建常规用途 v2 存储帐户
+            - name: 创建存储帐户（常规用途 v2）
               href: ../common/storage-account-create.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: 创建存储帐户（块 Blob）
+              href: storage-blob-create-account-block-blob.md
         - name: 迁移
           items:
             - name: 从 Data Lake Storage Gen1 迁移
